# enfield

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindReflective.cmake  deps.cmake  flags.cmake
enfield/: CMakeLists.txt  attached_object_utility.hpp  base_attached_object.hpp  base_entity_attached_object.hpp  database.hpp  database_conf.hpp  database_conf_impl.hpp  enfield.hpp  enfield_exception.hpp  enfield_logger.hpp  enfield_reflective.hpp  enfield_types.hpp  entity.hpp  internal_base_attached_object.hpp  mask.hpp  query.hpp  type_id.cpp  type_id.hpp  type_registry.hpp
enfield/attached_object/: base_attached_object.hpp  internal_base_attached_object.hpp
enfield/component/: component.hpp  data_holder.hpp  name.hpp
enfield/concept/: concept.hpp  printable.hpp  serializable.hpp
enfield/system/: base_system.hpp  system.hpp  system_manager.hpp
samples/: CMakeLists.txt
samples/base/: CMakeLists.txt  main.cpp
samples/serializable/: CMakeLists.txt  main.cpp
samples/system/: CMakeLists.txt  auto_updatable.hpp  components.hpp  conf.hpp  main.cpp
samples/test/: CMakeLists.txt  main.cpp
